--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
   </div>
 
   <!-- Map + Bar chart -->
-  <div style="display: flex; gap: 30px;">
+  <div style="display: flex;  flex-direction: column; gap: 30px;">
     <div id="dengue-map" style="flex: 1; height: 700px;"></div>
     <div id="dengue-bar-chart" style="flex: 1;"></div>
   </div>
