--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     </label><br>
     <input type="range" id="monthYearSlider" min="0" max="168" step="1" value="0" style="width: 60%;">
   </div>
-  <div style="display: flex; flex-direction: column; gap: 30px;">
+  <div style="display: flex; flex-direction: column; gap: 30px; align-items: center;">
     <div>
       <div id="dengue-map" style="flex: 1; height: 700px;"></div>
     </div>
